--- a/references.bib
+++ b/references.bib
@@ -12,3 +12,21 @@
   abstract = {The covariance among a range of 20 network structural properties of food webs plus net primary productivity was assessed for 14 published food webs using principal components analysis. Three primary components explained 84\% of the variability in the data sets, suggesting substantial covariance among the properties employed in the literature. The first dimension explained 48\% of the variance and could be ascribed to connectance, covarying significantly with the proportion of intermediate species and characteristic path length. The second dimension explained 19\% and was related to trophic species richness. The third axis explained 17\% and was related to ecosystem net primary productivity. A distinct opposite clustering of connectance, the proportion of intermediate species, and mean trophic level vs. the proportion of top and basal species and path length suggests a dichotomy in food-web structure. Food webs appear either clustered and highly interconnected or elongated with fewer links.},
   langid = {english}
 }
+
+@article{williamsLimitsTrophicLevels2004,
+  title = {Limits to {{Trophic Levels}} and {{Omnivory}} in {{Complex Food Webs}}: {{Theory}} and {{Data}}},
+  shorttitle = {Limits to {{Trophic Levels}} and {{Omnivory}} in {{Complex Food Webs}}},
+  author = {Williams, Richard~J. and Martinez, Neo~D.},
+  year = {2004},
+  month = mar,
+  journal = {The American Naturalist},
+  volume = {163},
+  number = {3},
+  pages = {458--468},
+  issn = {0003-0147, 1537-5323},
+  doi = {10.1086/381964},
+  urldate = {2025-03-20},
+  abstract = {While trophic levels have found broad application throughout ecology, they are also in much contention on analytical and empirical grounds. Here, we use a new generation of data and theory to examine long-standing questions about trophic-level limits and degrees of omnivory. The data include food webs of the Chesapeake Bay, U.S.A., the island of Saint Martin, a U.K. grassland, and a Florida seagrass community, which appear to be the most trophically complete food webs available in the primary literature due to their inclusion of autotrophs and empirically derived estimates of the relative energetic contributions of each trophic link. We show that most (54\%) of the 212 species in the four food webs can be unambiguously assigned to a discrete trophic level. Omnivory among the remaining species appears to be quite limited, as judged by the standard deviation of omnivores' energy-weighted food-chain lengths. This allows simple algorithms based on binary food webs without energetic details to yield surprisingly accurate estimates of species' trophic and omnivory levels. While maximum trophic levels may plausibly exceed historically asserted limits, our analyses contradict both recent empirical claims that these limits are exceeded and recent theoretical claims that rampant omnivory eliminates the scientific utility of the trophic-level concept.},
+  langid = {english},
+  file = {/Users/tanyastrydom/Zotero/storage/M3BISIHA/Williams and Martinez - 2004 - Limits to Trophic Levels and Omnivory in Complex F.pdf}
+}
