--- a/index.qmd
+++ b/index.qmd
@@ -46,8 +46,10 @@ Blah blah blah @vermaatMajorDimensionsFoodweb2009
 | Clust | mean clustering coefficient (probability that two taxa linked to the same taxon are also linked) |
 | GenSD | Normalized standard deviation of generality of a species standardized by $L/S$ |
 | Herbivore | Percentage of herbivores plus detritivores (taxa that feed on basal taxa) |
-| Intermediate | percentage of intermediate taxa (with both consumers and resources)LinkSD normalized standard deviation of links (number of consumers plus resources per taxon) |
-| Loop | Percentage of taxa in loops (food chains in which a taxon occurs twice)L/S links per species |
+| Intermediate | percentage of intermediate taxa (with both consumers and resources) |
+| LinkSD | normalized standard deviation of links (number of consumers plus resources per taxon) |
+| Loop | Percentage of taxa in loops (food chains in which a taxon occurs twice) |
+| L/S | links per species |
 | MaxSim | Mean of the maximum trophic similarity of each taxon to other taxa, the number of predators and prey shared by a pair of species divided by their total number of predators and prey |
 | Omnivory | Percentage of omnivores (taxa that feed on $\geq$ 2 taxa with different trophic levels) |
 | Path | characteristic path length, the mean shortest food chain length between species pairs |
