--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,38 @@
+@article{bluthgenWhatInteractionNetwork2008,
+  title = {What {{Do Interaction Network Metrics Tell Us About Specialization}} and {{Biological Traits}}},
+  author = {Bl{\"u}thgen, Nico and Fr{\"u}nd, Jochen and V{\'a}zquez, Diego P. and Menzel, Florian},
+  year = {2008},
+  journal = {Ecology},
+  volume = {89},
+  number = {12},
+  pages = {3387--3399},
+  issn = {1939-9170},
+  doi = {10.1890/07-2121.1},
+  urldate = {2025-04-02},
+  abstract = {The structure of ecological interaction networks is often interpreted as a product of meaningful ecological and evolutionary mechanisms that shape the degree of specialization in community associations. However, here we show that both unweighted network metrics (connectance, nestedness, and degree distribution) and weighted network metrics (interaction evenness, interaction strength asymmetry) are strongly constrained and biased by the number of observations. Rarely observed species are inevitably regarded as ``specialists,'' irrespective of their actual associations, leading to biased estimates of specialization. Consequently, a skewed distribution of species observation records (such as the lognormal), combined with a relatively low sampling density typical for ecological data, already generates a ``nested'' and poorly ``connected'' network with ``asymmetric interaction strengths'' when interactions are neutral. This is confirmed by null model simulations of bipartite networks, assuming that partners associate randomly in the absence of any specialization and any variation in the correspondence of biological traits between associated species (trait matching). Variation in the skewness of the frequency distribution fundamentally changes the outcome of network metrics. Therefore, interpretation of network metrics in terms of fundamental specialization and trait matching requires an appropriate control for such severe constraints imposed by information deficits. When using an alternative approach that controls for these effects, most natural networks of mutualistic or antagonistic systems show a significantly higher degree of reciprocal specialization (exclusiveness) than expected under neutral conditions. A higher exclusiveness is coherent with a tighter coevolution and suggests a lower ecological redundancy than implied by nested networks.},
+  copyright = {{\copyright} 2008 by the Ecological Society of America},
+  langid = {english},
+  file = {/Users/tanyastrydom/Zotero/storage/FT5VB6RI/Blüthgen et al. - 2008 - What Do Interaction Network Metrics ℡l Us About Sp.pdf}
+}
+
+@article{lauEcologicalNetworkMetrics2017,
+  title = {Ecological Network Metrics: Opportunities for Synthesis},
+  shorttitle = {Ecological Network Metrics},
+  author = {Lau, Matthew K. and Borrett, Stuart R. and Baiser, Benjamin and Gotelli, Nicholas J. and Ellison, Aaron M.},
+  year = {2017},
+  journal = {Ecosphere},
+  volume = {8},
+  number = {8},
+  pages = {e01900},
+  issn = {2150-8925},
+  doi = {10.1002/ecs2.1900},
+  urldate = {2025-03-28},
+  abstract = {Network ecology provides a systems basis for approaching ecological questions, such as factors that influence biological diversity, the role of particular species or particular traits in structuring ecosystems, and long-term ecological dynamics (e.g., stability). Whereas the introduction of network theory has enabled ecologists to quantify not only the degree, but also the architecture of ecological complexity, these advances have come at the cost of introducing new challenges, including new theoretical concepts and metrics, and increased data complexity and computational intensity. Synthesizing recent developments in the network ecology literature, we point to several potential solutions to these issues: integrating network metrics and their terminology across sub-disciplines; benchmarking new network algorithms and models to increase mechanistic understanding; and improving tools for sharing ecological network research, in particular ``model'' data provenance, to increase the reproducibility of network models and analyses. We propose that applying these solutions will aid in synthesizing ecological sub-disciplines and allied fields by improving the accessibility of network methods and models.},
+  copyright = {{\copyright} 2017 Lau et al.},
+  langid = {english},
+  file = {/Users/tanyastrydom/Zotero/storage/TKRWWMG5/Lau et al. - 2017 - Ecological network metrics opportunities for synt.pdf;/Users/tanyastrydom/Zotero/storage/W8QFKNM9/ecs2.html}
+}
+
 @article{vermaatMajorDimensionsFoodweb2009,
   title = {Major Dimensions in Food-Web Structure Properties},
   author = {Vermaat, Jan E. and Dunne, Jennifer A. and Gilbert, Alison J.},
