--- a/references.bib
+++ b/references.bib
@@ -15,6 +15,23 @@
   file = {/Users/tanyastrydom/Zotero/storage/FT5VB6RI/Blüthgen et al. - 2008 - What Do Interaction Network Metrics ℡l Us About Sp.pdf}
 }
 
+@article{cirtwillLatitudinalGradientsBiotic2015,
+  title = {Latitudinal Gradients in Biotic Niche Breadth Vary across Ecosystem Types},
+  author = {Cirtwill, Alyssa R. and Stouffer, Daniel B. and Romanuk, Tamara N.},
+  year = {2015},
+  journal = {Proceedings: Biological Sciences},
+  volume = {282},
+  number = {1819},
+  eprint = {24761314},
+  eprinttype = {jstor},
+  pages = {1--7},
+  publisher = {Royal Society},
+  issn = {0962-8452},
+  urldate = {2025-04-15},
+  abstract = {Several properties of food webs---the networks of feeding links between species---are known to vary systematically with the species richness of the underlying community. Under the 'latitude--niche breadth hypothesis', which predicts that species in the tropics will tend to evolve narrower niches, one might expect that these scaling relationships could also be affected by latitude. To test this hypothesis, we analysed the scaling relationships between species richness and average generality, vulnerability and links per species across a set of 196 empirical food webs. In estuarine, marine and terrestrial food webs there was no effect of latitude on any scaling relationship, suggesting constant niche breadth in these habitats. In freshwater communities, on the other hand, there were strong effects of latitude on scaling relationships, supporting the latitude--niche breadth hypothesis. These contrasting findings indicate that it may be more important to account for habitat than latitude when exploring gradients in food-web structure.},
+  file = {/Users/tanyastrydom/Zotero/storage/CZESREUD/Cirtwill et al. - 2015 - Latitudinal gradients in biotic niche breadth vary.pdf}
+}
+
 @article{delmasAnalysingEcologicalNetworks2019,
   title = {Analysing Ecological Networks of Species Interactions},
   author = {Delmas, Eva and Besson, Mathilde and Brice, Marie-H{\'e}l{\`e}ne and Burkle, Laura A. and Riva, Giulio V. Dalla and Fortin, Marie-Jos{\'e}e and Gravel, Dominique and Guimar{\~a}es, Paulo R. and Hembry, David H. and Newman, Erica A. and Olesen, Jens M. and Pires, Mathias M. and Yeakel, Justin D. and Poisot, Timoth{\'e}e},
@@ -30,6 +47,24 @@
   langid = {english},
   keywords = {biogeography,community ecology,DelmasE,ecological networks,graph theory,interactions,networks,PoisotT,Recommended_Tim,Workshop_Oct},
   file = {/Users/tanyastrydom/Zotero/storage/7ZDGIXPL/Delmas et al. - 2019 - Analysing ecological networks of species interacti.pdf;/Users/tanyastrydom/Zotero/storage/EU2YG29S/brv.html}
+}
+
+@article{kortschFoodwebStructureVaries2019,
+  title = {Food-Web Structure Varies along Environmental Gradients in a High-Latitude Marine Ecosystem},
+  author = {Kortsch, Susanne and Primicerio, Raul and Aschan, Michaela and Lind, Sigrid and Dolgov, Andrey V. and Planque, Benjamin},
+  year = {2019},
+  journal = {Ecography},
+  volume = {42},
+  number = {2},
+  pages = {295--308},
+  issn = {1600-0587},
+  doi = {10.1111/ecog.03443},
+  urldate = {2025-04-15},
+  abstract = {Large-scale patterns in species diversity and community composition are associated with environmental gradients, but the implications of these patterns for food-web structure are still unclear. Here, we investigated how spatial patterns in food-web structure are associated with environmental gradients in the Barents Sea, a highly productive shelf sea of the Arctic Ocean. We compared food webs from 25 subregions in the Barents Sea and examined spatial correlations among food-web metrics, and between metrics and spatial variability in seawater temperature, bottom depth and number of days with ice cover. Several food-web metrics were positively associated with seawater temperature: connectance, level of omnivory, clustering, cannibalism, and high variability in generalism, while other food-web metrics such as modularity and vulnerability were positively associated with sea ice and negatively with temperature. Food-web metrics positively associated with habitat heterogeneity were: number of species, link density, omnivory, path length, and trophic level. This finding suggests that habitat heterogeneity promotes food-web complexity in terms of number of species and link density. Our analyses reveal that spatial variation in food-web structure along the environmental gradients is partly related to species turnover. However, the higher interaction turnover compared to species turnover along these gradients indicates a consistent modification of food-web structure, implying that interacting species may co-vary in space. In conclusion, our study shows how environmental heterogeneity, via environmental filtering, influences not only turnover in species composition, but also the structure of food webs over large spatial scales.},
+  copyright = {{\copyright} 2018 The Authors},
+  langid = {english},
+  keywords = {Arctic,Barents Sea,biogeography},
+  file = {/Users/tanyastrydom/Zotero/storage/CWYA4C7W/ecog.html}
 }
 
 @article{lauEcologicalNetworkMetrics2017,
@@ -48,6 +83,40 @@
   copyright = {{\copyright} 2017 Lau et al.},
   langid = {english},
   file = {/Users/tanyastrydom/Zotero/storage/TKRWWMG5/Lau et al. - 2017 - Ecological network metrics opportunities for synt.pdf;/Users/tanyastrydom/Zotero/storage/W8QFKNM9/ecs2.html}
+}
+
+@article{lurgiGeographicalVariationMultiplex2020,
+  title = {Geographical Variation of Multiplex Ecological Networks in Marine Intertidal Communities},
+  author = {Lurgi, Miguel and Galiana, N{\'u}ria and Broitman, Bernardo R. and K{\'e}fi, Sonia and Wieters, Evie A. and Navarrete, Sergio A.},
+  year = {2020},
+  journal = {Ecology},
+  volume = {101},
+  number = {11},
+  eprint = {26998017},
+  eprinttype = {jstor},
+  pages = {1--13},
+  publisher = {[Wiley, Ecological Society of America]},
+  issn = {0012-9658},
+  urldate = {2025-04-15},
+  abstract = {Understanding the drivers of geographical variation in species distributions, and the resulting community structure, constitutes one of the grandest challenges in ecology. Geographical patterns of species richness and composition have been relatively well studied. Less is known about how the entire set of trophic and non-trophic ecological interactions, and the complex networks that they create by gluing species together in complex communities, change across geographical extents. Here, we compiled data of species composition and three types of ecological interactions occurring between species in rocky intertidal communities across a large spatial extent ({\textasciitilde}970 km of shoreline) of central Chile, and analyzed the geographical variability in these multiplex networks (i.e., comprising several interaction types) of ecological interactions. We calculated nine network summary statistics common across interaction types, and additional network attributes specific to each of the different types of interactions. We then investigated potential environmental drivers of this multivariate network organization. These included variation in sea surface temperature and coastal upwelling, the main drivers of productivity in nearshore waters. Our results suggest that structural properties of multiplex ecological networks are affected by local species richness and modulated by factors influencing productivity and environmental predictability. Our results show that non-trophic negative interactions are more sensitive to spatially structured temporal environmental variation than feeding relationships, with non-trophic positive interactions being the least labile to it. We also show that environmental effects are partly mediated through changes in species richness and partly through direct influences on species interactions, probably associated to changes in environmental predictability and to bottom-up nutrient availability. Our findings highlight the need for a comprehensive picture of ecological interactions and their geographical variability if we are to predict potential effects of environmental changes on ecological communities.},
+  file = {/Users/tanyastrydom/Zotero/storage/CJLNP3MF/Lurgi et al. - 2020 - Geographical variation of multiplex ecological net.pdf}
+}
+
+@article{olivierExploringTemporalVariability2019a,
+  title = {Exploring the Temporal Variability of a Food Web Using Long-Term Biomonitoring Data},
+  author = {Olivier, Pierre and Frelat, Romain and Bonsdorff, Erik and Kortsch, Susanne and Kr{\"o}ncke, Ingrid and M{\"o}llmann, Christian and Neumann, Hermann and Sell, Anne F. and Nordstr{\"o}m, Marie C.},
+  year = {2019},
+  journal = {Ecography},
+  volume = {42},
+  number = {12},
+  pages = {2107--2121},
+  issn = {1600-0587},
+  doi = {10.1111/ecog.04461},
+  urldate = {2025-04-15},
+  abstract = {Ecological communities are constantly being reshaped in the face of environmental change and anthropogenic pressures. Yet, how food webs change over time remains poorly understood. Food web science is characterized by a trade-off between complexity (in terms of the number of species and feeding links) and dynamics. Topological analysis can use complex, highly resolved empirical food web models to explore the architecture of feeding interactions but is limited to a static view, whereas ecosystem models can be dynamic but use highly aggregated food webs. Here, we explore the temporal dynamics of a highly resolved empirical food web over a time period of 18 years, using the German Bight fish and benthic epifauna community as our case study. We relied on long-term monitoring ecosystem surveys (from 1998 to 2015) to build a metaweb, i.e. the meta food web containing all species recorded over the time span of our study. We then combined time series of species abundances with topological network analysis to construct annual food web snapshots. We developed a new approach, `node-weighted' food web metrics by including species abundances to represent the temporal dynamics of food web structure, focusing on generality and vulnerability. Our results suggest that structural food web properties change through time; however, binary food web structural properties may not be as temporally variable as the underlying changes in species composition. Further, the node-weighted metrics enabled us to detect that food web structure was influenced by changes in species composition during the first half of the time series and more strongly by changes in species dominance during the second half. Our results demonstrate how ecosystem surveys can be used to monitor temporal changes in food web structure, which are important ecosystem indicators for building marine management and conservation plans.},
+  langid = {english},
+  keywords = {food web structure,temporal variability,topology},
+  file = {/Users/tanyastrydom/Zotero/storage/BVAP48E4/Olivier et al. - 2019 - Exploring the temporal variability of a food web u.pdf;/Users/tanyastrydom/Zotero/storage/XCR3RW4J/ecog.html}
 }
 
 @article{vermaatMajorDimensionsFoodweb2009,
@@ -81,4 +150,22 @@
   abstract = {While trophic levels have found broad application throughout ecology, they are also in much contention on analytical and empirical grounds. Here, we use a new generation of data and theory to examine long-standing questions about trophic-level limits and degrees of omnivory. The data include food webs of the Chesapeake Bay, U.S.A., the island of Saint Martin, a U.K. grassland, and a Florida seagrass community, which appear to be the most trophically complete food webs available in the primary literature due to their inclusion of autotrophs and empirically derived estimates of the relative energetic contributions of each trophic link. We show that most (54\%) of the 212 species in the four food webs can be unambiguously assigned to a discrete trophic level. Omnivory among the remaining species appears to be quite limited, as judged by the standard deviation of omnivores' energy-weighted food-chain lengths. This allows simple algorithms based on binary food webs without energetic details to yield surprisingly accurate estimates of species' trophic and omnivory levels. While maximum trophic levels may plausibly exceed historically asserted limits, our analyses contradict both recent empirical claims that these limits are exceeded and recent theoretical claims that rampant omnivory eliminates the scientific utility of the trophic-level concept.},
   langid = {english},
   file = {/Users/tanyastrydom/Zotero/storage/M3BISIHA/Williams and Martinez - 2004 - Limits to Trophic Levels and Omnivory in Complex F.pdf}
+}
+
+@article{yenLinkingStructureFunction2016,
+  title = {Linking Structure and Function in Food Webs: Maximization of Different Ecological Functions Generates Distinct Food Web Structures},
+  shorttitle = {Linking Structure and Function in Food Webs},
+  author = {Yen, Jian D. L. and Cabral, Reniel B. and Cantor, Mauricio and Hatton, Ian and Kortsch, Susanne and Patr{\'i}cio, Joana and Yamamichi, Masato},
+  year = {2016},
+  journal = {Journal of Animal Ecology},
+  volume = {85},
+  number = {2},
+  eprint = {24701654},
+  eprinttype = {jstor},
+  pages = {537--547},
+  publisher = {[Wiley, British Ecological Society]},
+  issn = {0021-8790},
+  urldate = {2025-04-15},
+  abstract = {1. Trophic interactions are central to ecosystem functioning, but the link between food web structure and ecosystem functioning remains obscure. Regularities (i.e. consistent patterns) in food web structure suggest the possibility of regularities in ecosystem functioning, which might be used to relate structure to function. 2. We introduce a novel, genetic algorithm approach to simulate food webs with maximized throughput (a proxy for ecosystem functioning) and compare the structure of these simulated food webs to real empirical food webs using common metrics of food web structure. We repeat this analysis using robustness to secondary extinctions (a proxy for ecosystem resilience) instead of throughput to determine the relative contributions of ecosystem functioning and ecosystem resilience to food web structure. 3. Simulated food webs that maximized robustness were similar to real food webs when connectance (i.e. levels of interaction across the food web) was high, but this result did not extend to food webs with low connectance. Simulated food webs that maximized throughput or a combination of throughput and robustness were not similar to any real food webs. 4. Simulated maximum-throughput food webs differed markedly from maximum-robustness food webs, which suggests that maximizing different ecological functions can generate distinct food web structures. Based on our results, food web structure would appear to have a stronger relationship with ecosystem resilience than with ecosystem throughput. 5. Our genetic algorithm approach is general and is well suited to large, realistically complex food webs. Genetic algorithms can incorporate constraints on structure and can generate outputs that can be compared directly to empirical data. Our method can be used to explore a range of maximization or minimization hypotheses, providing new perspectives on the links between structure and function in ecological systems.},
+  file = {/Users/tanyastrydom/Zotero/storage/JG937BH9/D. L. Yen et al. - 2016 - Linking structure and function in food webs maxim.pdf}
 }
