🍽️ update features table

--- a/references.bib
+++ b/references.bib
@@ -102,6 +102,23 @@
   file = {/Users/tanyastrydom/Zotero/storage/CJLNP3MF/Lurgi et al. - 2020 - Geographical variation of multiplex ecological net.pdf}
 }
 
+@article{miloNetworkMotifsSimple2002,
+  title = {Network {{Motifs}}: {{Simple Building Blocks}} of {{Complex Networks}}},
+  shorttitle = {Network {{Motifs}}},
+  author = {Milo, R. and {Shen-Orr}, S. and Itzkovitz, S. and Kashtan, N. and Chklovskii, D. and Alon, U.},
+  year = {2002},
+  month = oct,
+  journal = {Science},
+  volume = {298},
+  number = {5594},
+  pages = {824--827},
+  publisher = {American Association for the Advancement of Science},
+  doi = {10.1126/science.298.5594.824},
+  urldate = {2024-07-05},
+  abstract = {Complex networks are studied across many fields of science. To uncover their structural design principles, we defined ``network motifs,'' patterns of interconnections occurring in complex networks at numbers that are significantly higher than those in randomized networks. We found such motifs in networks from biochemistry, neurobiology, ecology, and engineering. The motifs shared by ecological food webs were distinct from the motifs shared by the genetic networks of Escherichia coli and Saccharomyces cerevisiae or from those found in the World Wide Web. Similar motifs were found in networks that perform information processing, even though they describe elements as different as biomolecules within a cell and synaptic connections between neurons in Caenorhabditis elegans. Motifs may thus define universal classes of networks. This approach may uncover the basic building blocks of most networks.},
+  file = {/Users/tanyastrydom/Zotero/storage/YNC2AV7L/Milo et al. - 2002 - Network Motifs Simple Building Blocks of Complex .pdf}
+}
+
 @article{olivierExploringTemporalVariability2019a,
   title = {Exploring the Temporal Variability of a Food Web Using Long-Term Biomonitoring Data},
   author = {Olivier, Pierre and Frelat, Romain and Bonsdorff, Erik and Kortsch, Susanne and Kr{\"o}ncke, Ingrid and M{\"o}llmann, Christian and Neumann, Hermann and Sell, Anne F. and Nordstr{\"o}m, Marie C.},
@@ -117,6 +134,72 @@
   langid = {english},
   keywords = {food web structure,temporal variability,topology},
   file = {/Users/tanyastrydom/Zotero/storage/BVAP48E4/Olivier et al. - 2019 - Exploring the temporal variability of a food web u.pdf;/Users/tanyastrydom/Zotero/storage/XCR3RW4J/ecog.html}
+}
+
+@article{staniczenkoGhostNestednessEcological2013,
+  ids = {StanKopp13a,Staniczenko2013GhoNesa},
+  title = {The Ghost of Nestedness in Ecological Networks},
+  author = {Staniczenko, Phillip P. A. and Kopp, Jason C. and Allesina, Stefano},
+  year = {2013},
+  month = jun,
+  journal = {Nature Communications},
+  volume = {4},
+  number = {1},
+  pages = {1391},
+  issn = {2041-1723},
+  doi = {10.1038/ncomms2422},
+  urldate = {2020-09-24},
+  langid = {english},
+  file = {/Users/tanyastrydom/Zotero/storage/5657XVPS/Staniczenko et al. - 2013 - The ghost of nestedness in ecological networks.pdf;/Users/tanyastrydom/Zotero/storage/8U7ZWI8Q/Staniczenko et al. - 2013 - The ghost of nestedness in ecological networks.pdf;/Users/tanyastrydom/Zotero/storage/82U9PS2J/ncomms2422.html;/Users/tanyastrydom/Zotero/storage/Y3W8KLIT/Staniczenko et al. - 2013 - The ghost of nestedness in ecological networks.html}
+}
+
+@article{stoufferEvidenceExistenceRobust2007,
+  title = {Evidence for the Existence of a Robust Pattern of Prey Selection in Food Webs},
+  author = {Stouffer, Daniel B and Camacho, Juan and Jiang, Wenxin and Nunes Amaral, Lu{\'i}s A},
+  year = {2007},
+  month = jun,
+  journal = {Proceedings of the Royal Society B: Biological Sciences},
+  volume = {274},
+  number = {1621},
+  pages = {1931--1940},
+  publisher = {Royal Society},
+  doi = {10.1098/rspb.2007.0571},
+  urldate = {2024-04-04},
+  abstract = {Food webs aim to provide a thorough representation of the trophic interactions found in an ecosystem. The complexity of empirical food webs, however, is leading many ecologists to focus dynamic ecosystem studies on smaller microcosm or mesocosm studies based upon community modules, which comprise three to five species and the interactions likely to have ecological relevance. We provide here a structural counterpart to community modules. We investigate food-web `motifs' which are n-species connected subgraphs found within the food web. Remarkably, we find that the over- and under-representation of three-species motifs in empirical food webs can be understood through comparison to a static food-web model, the niche model. Our result conclusively demonstrates that predation upon species with some `characteristic' niche value is the prey selection mechanism consistent with the structural properties of empirical food webs.},
+  keywords = {complex networks,food webs,food-web structure,network motifs,prey selection}
+}
+
+@article{stoufferRobustMeasureFood2006a,
+  title = {A Robust Measure of Food Web Intervality},
+  author = {Stouffer, Daniel B. and Camacho, Juan and Amaral, Lu{\'i}s A. Nunes},
+  year = {2006},
+  month = dec,
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {103},
+  number = {50},
+  pages = {19015--19020},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.0603844103},
+  urldate = {2024-02-01},
+  abstract = {Intervality of a food web is related to the number of trophic dimensions characterizing the niches in a community. We introduce here a mathematically robust measure for food web intervality. It has previously been noted that empirical food webs are not strictly interval; however, upon comparison to suitable null hypotheses, we conclude that empirical food webs actually do exhibit a strong bias toward contiguity of prey, that is, toward intervality. Further, our results strongly suggest that empirically observed species and their diets can be mapped onto a single dimension. This finding validates a critical assumption in the recently proposed static niche model and provides guidance for ongoing efforts to develop dynamic models of ecosystems.},
+  langid = {english},
+  file = {/Users/tanyastrydom/Zotero/storage/GXYV5D4I/Stouffer et al. - 2006 - A robust measure of food web intervality.pdf}
+}
+
+@article{strydomSVDEntropyReveals2021,
+  title = {{{SVD Entropy Reveals}} the {{High Complexity}} of {{Ecological Networks}}},
+  author = {Strydom, Tanya and Dalla Riva, Giulio V. and Poisot, Timoth{\'e}e},
+  year = {2021},
+  journal = {Frontiers in Ecology and Evolution},
+  volume = {9},
+  publisher = {Frontiers},
+  issn = {2296-701X},
+  doi = {10.3389/fevo.2021.623141},
+  urldate = {2021-06-18},
+  abstract = {Quantifying the complexity of ecological networks has remained elusive. Primarily, complexity has been defined on the basis of the structural (or behavioural) complexity of the system. These definitions ignore the notion of 'physical complexity', which can measure the amount of information contained in an ecological network, and how difficult it would be to compress. We present relative rank deficiency and SVD entropy as measures of 'external' and 'internal' complexity respectively. Using bipartite ecological networks, we find that they all show a very high, almost maximal, physical complexity. Pollination networks, in particular, are more complex when compared to other types of interactions. In addition, we find that SVD entropy relates to other structural measures of complexity (nestedness, connectance, and spectral radius), but does not inform about the resilience of a network when using simulated extinction cascades, which has previously been reported for structural measures of complexity. We argue that SVD entropy provides a fundamentally more 'correct' measure of network complexity and should be added to the toolkit of descriptors of ecological networks moving forward.},
+  copyright = {All rights reserved},
+  langid = {english},
+  file = {/Users/tanyastrydom/Zotero/storage/7CNY28YW/Strydom et al. - 2021 - SVD Entropy Reveals the High Complexity of Ecologi.pdf}
 }
 
 @article{vermaatMajorDimensionsFoodweb2009,
@@ -150,6 +233,22 @@
   abstract = {While trophic levels have found broad application throughout ecology, they are also in much contention on analytical and empirical grounds. Here, we use a new generation of data and theory to examine long-standing questions about trophic-level limits and degrees of omnivory. The data include food webs of the Chesapeake Bay, U.S.A., the island of Saint Martin, a U.K. grassland, and a Florida seagrass community, which appear to be the most trophically complete food webs available in the primary literature due to their inclusion of autotrophs and empirically derived estimates of the relative energetic contributions of each trophic link. We show that most (54\%) of the 212 species in the four food webs can be unambiguously assigned to a discrete trophic level. Omnivory among the remaining species appears to be quite limited, as judged by the standard deviation of omnivores' energy-weighted food-chain lengths. This allows simple algorithms based on binary food webs without energetic details to yield surprisingly accurate estimates of species' trophic and omnivory levels. While maximum trophic levels may plausibly exceed historically asserted limits, our analyses contradict both recent empirical claims that these limits are exceeded and recent theoretical claims that rampant omnivory eliminates the scientific utility of the trophic-level concept.},
   langid = {english},
   file = {/Users/tanyastrydom/Zotero/storage/M3BISIHA/Williams and Martinez - 2004 - Limits to Trophic Levels and Omnivory in Complex F.pdf}
+}
+
+@article{williamsSuccessItsLimits2008a,
+  title = {Success and Its Limits among Structural Models of Complex Food Webs},
+  author = {Williams, Richard J. and Martinez, Neo D.},
+  year = {2008},
+  month = may,
+  journal = {The Journal of Animal Ecology},
+  volume = {77},
+  number = {3},
+  pages = {512--519},
+  issn = {1365-2656},
+  doi = {10.1111/j.1365-2656.2008.01362.x},
+  abstract = {1. Following the development of the relatively successful niche model, several other simple structural food web models have been proposed. These models predict the detailed structure of complex food webs given only two input parameters, the numbers of species and the number of feeding links among them. 2. The models claim different degrees of success but have not been compared consistently with each other or with the empirical data. We compared the performance of five structural models rigorously against 10 empirical food webs from a variety of aquatic and terrestrial habitats containing 25-92 species and 68-997 links. 3. All models include near-hierarchical ordering of species' consumption and have identical distributions of the number of prey of each consumer species, but differ in the extent to which species' diets are required to be contiguous and the rules used to assign feeding links. 4. The models perform similarly on a range of food-web properties, including the fraction of top, intermediate and basal species, the standard deviations of generality and connectivity and the fraction of herbivores and omnivores. 5. For other properties, including the standard deviation of vulnerability, the fraction of cannibals and species in loops, mean trophic level, path length, clustering coefficient, maximum similarity and diet discontinuity, there are significant differences in the performance of the different models. 6. While the empirical data do not support the niche model's assumption of diet contiguity, models which relax this assumption all have worse overall performance than the niche model. All the models under-estimate severely the fraction of species that are herbivores and exhibit other important failures that need to be addressed in future research.},
+  langid = {english},
+  pmid = {18284474}
 }
 
 @article{yenLinkingStructureFunction2016,
