--- a/index.qmd
+++ b/index.qmd
@@ -38,32 +38,37 @@ Blah blah blah @vermaatMajorDimensionsFoodweb2009
 *"It is incumbent on network ecologists to establish clearly the independence and uniqueness of the descriptive metrics used."* - @lauEcologicalNetworkMetrics2017
 
 | Label | Definition | "Function" | Reference (for maths), can make footnotes probs |
-|--------------|-----------------------------|--------------|--------------|
-| Basal | Percentage of basal taxa (taxa without resources) |  |  |
+|----------------|--------------------------|----------------|----------------|
+| Basal | Percentage of basal taxa, defined as species who have a vulnerability of zero |  |  |
 | Connectance | $L/S^2$, where $S$ is the number of species and $L$ the number of links |  |  |
-| Cannibal | Percentage of cannibals |  |  |
-| ChLen | Mean food chain length, averaged over all species |  |  |
+| Cannibal | Percentage of species that are cannibals |  |  |
+| ChLen | Mean food chain length, averaged over all species (where a food chain is defined as a continuous path from a 'basal' to a 'top' species) |  |  |
 | ChSD | Standard deviation of ChLen |  |  |
 | ChNum | log number of food chains |  |  |
-| Clust | mean clustering coefficient (probability that two taxa linked to the same taxon are also linked) |  |  |
-| GenSD | Normalized standard deviation of generality of a species standardized by $L/S$ |  |  |
-| Herbivore | Percentage of herbivores plus detritivores (taxa that feed on basal taxa) |  |  |
-| Intermediate | percentage of intermediate taxa (with both consumers and resources) |  |  |
-| LinkSD | normalized standard deviation of links (number of consumers plus resources per taxon) |  |  |
-| Loop | Percentage of taxa in loops (food chains in which a taxon occurs twice) |  |  |
+| Clust | mean clustering coefficient (probability that two taxa linked to the same taxon are also linked) |  | **TODO** |
+| GenSD | Normalized standard deviation of generality of a species standardized by $L/S$ |  | @williamsSuccessItsLimits2008a |
+| Herbivore | Percentage of herbivores plus detritivores (taxa that feed only on basal taxa) |  |  |
+| Intermediate | Percentage of intermediate taxa (with both consumers and resources) |  |  |
+| LinkSD | Normalized standard deviation of links (number of consumers plus resources per taxon) |  |  |
+| Loop | Percentage of taxa in loops (food chains in which a taxon occurs twice) |  | **TODO** |
 | L/S | links per species |  |  |
-| MaxSim | Mean of the maximum trophic similarity of each taxon to other taxa, the number of predators and prey shared by a pair of species divided by their total number of predators and prey |  |  |
+| MaxSim | Mean of the maximum trophic similarity of each taxon to other taxa, the number of predators and prey shared by a pair of species divided by their total number of predators and prey |  | **TODO** |
 | Omnivory | Percentage of omnivores (taxa that feed on $\geq$ 2 taxa with different trophic levels) |  |  |
 | Path | characteristic path length, the mean shortest food chain length between species pairs |  |  |
-| Richness | Number of trophic species, or taxa |  |  |
-| TL | prey-weighted trophic level averaged across taxa [@williamsLimitsTrophicLevels2004] |  |  |
+| Richness | Number of nodes in the network |  |  |
+| TL | Prey-weighted trophic level averaged across taxa |  | @williamsLimitsTrophicLevels2004 |
 | Top | Percentage of top taxa (taxa without consumers) |  |  |
 | VulSD | Normalized standard deviation of vulnerability of a species standardized by $L/S$ |  |  |
 | Links | The number of links in the network |  |  |
 | Diameter | Diameter can also be measured as the average of the distances between each pair of nodes in the network |  | @delmasAnalysingEcologicalNetworks2019 |
-| Nestedness |  |  |  |
-| Modularity |  |  |  |
-| Centrality | Centrality is a measure of how ‘influential’ a species is, under various definitions of ‘influence’... |  |  |
+| $\rho$ | Spectral radius is a a conceptual analog to nestedness (and more appropriate for unipartite networks). It is defined as the absolute value of the largest real part of the eigenvalues of the *undirected* adjacency matrix |  | @staniczenkoGhostNestednessEcological2013 |
+| Complexity | SVD complexity of a network, defined as the Pielou entropy of its singular values | Something about structural v behavioural complexity being captured | @strydomSVDEntropyReveals2021 |
+| Centrality | Centrality is a measure of how ‘influential’ a species is, under various definitions of ‘influence’... | Centrality can help in quantifying the importance of species in a network |  |
+| S1 | Number of linear chains |  | @stoufferEvidenceExistenceRobust2007 @miloNetworkMotifsSimple2002 |
+| S2 | Number of omnivory motifs |  | @stoufferEvidenceExistenceRobust2007 @miloNetworkMotifsSimple2002 |
+| S4 | Number of apparent competition motifs |  | @stoufferEvidenceExistenceRobust2007 @miloNetworkMotifsSimple2002 |
+| S5 | Number of direct competition motifs |  | @stoufferEvidenceExistenceRobust2007 @miloNetworkMotifsSimple2002 |
+| Intervality |  |  | **TODO @s**toufferRobustMeasureFood2006a |
 
 : An informative caption about the different network properties {#tbl-properties}
 
