--- a/index.qmd
+++ b/index.qmd
@@ -68,7 +68,7 @@ Blah blah blah @vermaatMajorDimensionsFoodweb2009
 | S2 | Number of omnivory motifs |  | @stoufferEvidenceExistenceRobust2007 @miloNetworkMotifsSimple2002 |
 | S4 | Number of apparent competition motifs |  | @stoufferEvidenceExistenceRobust2007 @miloNetworkMotifsSimple2002 |
 | S5 | Number of direct competition motifs |  | @stoufferEvidenceExistenceRobust2007 @miloNetworkMotifsSimple2002 |
-| Intervality |  |  | **TODO @s**toufferRobustMeasureFood2006a |
+| Intervality |  |  | **TODO** @stoufferRobustMeasureFood2006a |
 
 : An informative caption about the different network properties {#tbl-properties}
 
